<resources>
    <string name="app_name">Shopping List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Shopping List</string>
    <string name="button_plan">Zaplanuj zakupy</string>
    <string name="button_shopping">Zrób zakupy</string>
    <string name="title_activity_planning">Planowanie</string>
    <string name="title_activity_shopping_list">Lista zakupów</string>
    <string name="text_shopping_list_from_date">Z dnia:</string>
    <string name="text_shopping_list_title">Lista zakupów</string>
    <string name="button_save">Zapisz</string>
    <string name="hint_product">produkt</string>
    <string name="hint_quantity">ilość</string>
    <string name="hint_unit">jedn.</string>
    <string name="title_activity_shopping">Zakupy</string>
    <string name="text_shop_choose_list">Wybierz listę na zakupy</string>
    <string name="title_activity_shopping_details">Lista zakupów</string>
    <string name="text_label_product">Produkt</string>
    <string name="text_label_quantity">Ilość</string>
    <string name="text_label_unit">Jedn.</string>
    <string name="text_label_checked">W koszyku</string>
    <string name="text_overall">Suma:</string>
    <string name="button_recount">Przelicz</string>
    <string name="button_clear_planning_list">Wyczyść wszystkie</string>
    <string name="logo">logo</string>
    <string name="logo_land">logo</string>
    <string name="plus_button">plus_button</string>
    <string name="validation_message.empty_value">Pole nie może być puste</string>
    <string name="validation_message.number_value">Musisz wpisać liczbę!</string>

    <string-array name="units_array">
        <item>szt</item>
        <item>litr</item>
        <item>kg</item>
    </string-array>
    
</resources>
