<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFBB33"
    android:padding="20dp">

    <ImageView android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:src="@drawable/shopping_cart"/>

    <TextView android:id="@+id/main_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:text="@string/main_title"
        android:textStyle="bold"
        android:textColor="#CC0000"
        android:textSize="40sp"
        />

    <Button android:id="@+id/button_shopping"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"

        android:background="#33B5E5"

        android:text="@string/button_shopping"
        android:textSize="26sp"
        android:textColor="#000099"

        android:onClick="goShopping"
        />

    <Button android:id="@+id/button_planning"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/button_shopping"
        android:layout_centerHorizontal="true"

        android:background="#669900"

        android:text="@string/button_plan"
        android:textSize="26sp"
        android:textColor="#003300"

        android:onClick="planShopping"
        />


</RelativeLayout>